Some timeouts for pulse checks and store sync. Do not send default port for http check in Host header to avoid redirect problems

--- a/glide.yaml
+++ b/glide.yaml
@@ -1,4 +1,4 @@
-package: github.com/kobolog/gorb
+package: github.com/qk4l/gorb
 import:
 - package: github.com/Sirupsen/logrus
 - package: github.com/fsouza/go-dockerclient
