--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,6 @@ services:
     dev-go:
         build: .
         volumes: 
-            - ./:/go/src/github.com/kobolog/gorb
+            - ./:/go/src/github.com/qk4l/gorb
 
 
