--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '2'
 services:
-    dev-go:
+    gorb_dev-go:
         build: .
         volumes: 
             - ./:/go/src/github.com/qk4l/gorb
