Fix debian package builder; Fix List consul storage path, exclude nil-Value from consul response; Change Health checking for fallback logic

--- a/debian/rules
+++ b/debian/rules
@@ -2,8 +2,7 @@
 
 %:
 
-	dh $@ --builddirectory=_build --buildsystem=golang # --with=golang
-
+	dh $@ --builddirectory=_build
 
 override_dh_auto_install:
 	dh_auto_install -- --no-source
